Finished validations, changed some viewmodels, added some Account fields (name, DOB), added AccountHelper. Removed FK for Client => Order

--- a/ErehwonMvc/ErehwonMvc/ErehwonMvc.csproj
+++ b/ErehwonMvc/ErehwonMvc/ErehwonMvc.csproj
@@ -57,6 +57,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -192,6 +193,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AccountHelper.cs" />
     <Compile Include="Helpers\OrderHelpers.cs" />
     <Compile Include="Helpers\PurchaseHelpers.cs" />
     <Compile Include="Helpers\ViewHelpers.cs" />
@@ -204,6 +206,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OrderModel.cs" />
+    <Compile Include="Models\Plot.cs" />
     <Compile Include="Models\PlotAvailabilityModel.cs" />
     <Compile Include="Models\PlotDetailModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -301,6 +304,8 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\PlotAvailability\PlotAvailability.cshtml" />
     <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\Shared\PurchaseComplete.cshtml" />
+    <Content Include="Views\Order\OrderPlot.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
@@ -318,9 +323,7 @@
       <DependentUpon>Erehwon.dbml</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\PlotCategory\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
